[project]
name = "matrix-guard-api"
version = "0.1.0"
description = "A Proxy server to authorize matrix users on secured widgets"
authors = [
    {name = "Benjamin"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"

dependencies = [
    "fastapi[all] (>=0.121.3,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "requests (>=2.32.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)"
]

# Package-spezifische Konfiguration
[project.scripts]
matrix-guard-bot = "matrix_guard_api.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "matrix-guard-api"
version = "0.1.0"
description = "A Proxy server to authorize matrix users on secured widgets"
authors = ["Benjamin"]
readme = "README.md"
packages = [{include = "matrix_guard_api"}]
